updates to gradle talk from practice last night